4939-app - Configure c3p0's max db connection pool size
metasfresh-webui-api: 10 - 45
https://github.com/metasfresh/metasfresh/issues/4939